--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Share to Reading.am</string>
+    <string name="yep">Yep</string>
+    <string name="nope">Nope</string>
+    <string name="share_to_reading">Share to Reading</string>
 </resources>
