--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="nope">Nope</string>
     <string name="share_to_reading">Share to Reading</string>
     <string name="link_was_not_posted_to_reading">Link was not posted to Reading.am</string>
+    <string name="set_up">Set up</string>
 </resources>
